# Advent2022

./: .gitignore
2021/: a.out
2021/001/: a.out  test.c
2021/002/: a.out  test.c
2021/003/: a.out  test.c
2021/003b/: a.out  test.c
2021/004/: test.c
2022/000/: example.c  test.c
2022/001/: 001.code-workspace  001_copy  a.out  test.c  testB.c
2022/002/: Draft  a.out  test-better.c  test.c  testB.c
2022/003/: a.out  data  test.c  testB.c
2022/004/: test.c  testB.c
2022/005/: ReadMe  a.out  start  test.c  test.h  testB.c
2022/006/: a.out  test.c  testB.c
2022/007/: a.out  test  test.c  test001.c  test001B.c  testold.c
2022/008/: inuput  test  test.c  testB.c
2022/009/: a.out  test  test.c  testB.c
2022/010/: test  test.c  testB.c
2022/011/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  core.193510  day11  day11.c  item.c  item.h  main.h  monkeys.c  monkeys.h  team.c  team.h  test  test.c  test.py  testB.c
2022/011/old/: core.189007  test.c  testB.c
2022/012/: test  test006-YEAH.c  test006B.c
2022/014/: a.out  test  test.c  testB.c
2022/015/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  main.c  main.h  mapping.c  mapping.h  sensor.c  sensor.h  test  test.c
2022/020/: a.out  test.c  test001.c
2022/new/: a.out  test  test.c
2024/: .gitignore  aaa.txt  wtf.txt
2024/day_000/: Cargo.toml
2024/day_001/: Cargo.toml
2024/day_005/: Cargo.toml
2024/day_006/: Cargo.toml
2024/day_007/: Cargo.toml
2024/day_010/: Cargo.toml
2024/day_013/: Cargo.toml
(+57 files in other folders)
